# letit_rust

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust-ci.yml
src/: client.rs  error.rs  lib.rs
src/resources/: blog.rs  job.rs  micropost.rs  mod.rs
src/schemas/: blog.rs  common.rs  job.rs  micropost.rs  mod.rs
tests/: blog_test.rs  client_test.rs  job_test.rs  micropost_test.rs
tests/common/: mod.rs
