[package]
name = "letit_rust"
version = "0.0.0"
edition = "2021"
description = "A professional Rust client for the LetIt API, featuring high-performance support for Microposts and Job management."
license = "MIT"
homepage = "https://letit.com"
repository = "https://github.com/Businnect/letit_rust"
readme = "README.md"
keywords = ["letit", "sdk", "api", "client", "rust"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
